# Content-Creation-Studio

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.video  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  llm_router.py  prompt_registry.py  registry.py  retrieval.py  runner.py
backend/app/core/: config.py  logging.py  metrics.py  observability.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/integrations/: __init__.py  oauth.py  (+4 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_account_deletion.py  test_agent_chat.py  test_agent_e2e.py  test_agent_invoke.py  test_alembic_baseline.py  test_analytics_collect.py  test_analytics_empty.py  test_assets_endpoints.py  test_asyncio_run_audit.py  test_audit_log.py  test_audit_pagination_uuid.py  test_auth_deps.py  test_auth_me_contract.py  test_authz.py  test_beat_schedule.py  test_billing_dryrun.py  test_brand_crud.py  test_brand_workspace_isolation.py  test_cascade_delete.py  test_chunker.py  test_daily_loop.py  test_endpoint_isolation.py  test_health.py  test_ingest_pipeline.py  test_ingest_retry.py  test_kickoff_daily_loops.py  test_llm_budget_wiring.py  test_llm_router_pricing.py  test_migrations.py  test_minio_roundtrip.py  test_notifications.py  test_oauth_callback.py  test_prometheus_metrics.py  test_provisioning_race.py  test_publisher_dispatcher.py  test_publishers_dryrun.py  test_publishing_idempotency.py  test_publishing_isolation.py  test_publishing_validation.py  (+21 more)
(+216 files in other folders)
